# quick_py_ml

./: housing.ipynb  housing.py  housing.qmd  pyproject.toml
